Update progetto.